k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odewahn-todo-app
  labels:
    istio.io/rev: 1-22-8
