k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odewahn-todo-app-backend
  namespace: odewahn-todo-app
spec:
  selector:
    app: odewahn-todo-app-backend
  ports:
    - name: http
      port: 80
      targetPort: 3001
  type: ClusterIP
