k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odewahn-todo-app-db
  namespace: odewahn-todo-app
spec:
  selector:
    app: odewahn-todo-app-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
